--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
-<!doctype html><html lang="en">
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Blog Project</title>
-<meta name="viewpoint" contect="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<link rel="stylesheet" href="css/app.css">
+  <meta charset="utf-8">
+  <title>Blog Project</title>
+  <meta name="viewpoint" contect="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-<script src="js/app.js">
-</script>
-<header><h1>Adventure</h1></header>
+  <script src="js/app.js">
+  </script>
+  <header>
+    <h1>Expedition</h1>
+  </header>
+  <div class="container">
+    <main>
+    </main>
+  </div>
+
+  <footer>
+    Made with ♥ @ Udacity
+  </footer>
 </body>
 </html>
