--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     </main>
   </div>
 
+  <aside>
+      <h2>About Me</h2>
+
+      <p>Hi. This is J!</p>
+  </aside>
+
   <footer>
     Made with ♥ @ Udacity
   </footer>
