Adding stuff to sidebar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <h2>About Me</h2>
 
       <p>Hi. This is J!</p>
+      <p>I love reading books.</p>
+      <p>Especially from Dan Brown or Simon Beckett :) </p>
   </aside>
 
   <footer>
